Fixed overflow issues for mobile on design page. In launch/, mock post info now has correct aspect ratio.

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1083,3 +1083,27 @@ iframe {
     margin-bottom: -0.25rem;
   }
 }
+
+#emoji-comparison {
+  div {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1rem;
+    justify-content: center;
+    margin-bottom: 1rem;
+  }
+
+  img {
+    width: min(100px, 12vw);
+    aspect-ratio: 1;
+    object-fit: contain;
+    margin: 0 auto;
+  }
+
+  .subfigure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
